@@ -1,3 +1,5 @@
+#  if building a debug version:  make DEBUG=yes
+#
 
 UHEXEN2_TOP:=..
 LIBS_DIR:=$(UHEXEN2_TOP)/libs
@@ -8,18 +10,23 @@ LINKER := $(CC)
 
 #CPUFLAGS= -march=i486
 CPUFLAGS= -march=i586
-CFLAGS  = $(CPUFLAGS) -O3 -Wall -Wshadow -DWIN32_LEAN_AND_MEAN
+CFLAGS  = -g -Wall
+CFLAGS += $(CPUFLAGS)
+CFLAGS += -DWIN32_LEAN_AND_MEAN
+ifndef DEBUG
+CFLAGS += -O2 -DNDEBUG=1
+endif
 LDFLAGS = -mconsole
 
 XDELTA_DIR:= $(LIBS_DIR)/xdelta3
-XDFLAGS:= -fno-builtin \
-	  -DXD3_DEBUG=0 -DNDEBUG=1 \
-	  -DXD3_STDIO=0 -DXD3_POSIX=0 -DXD3_WIN32=1
+XDFLAGS:= -DXD3_DEBUG=0
 # when XD3_USE_LARGEFILE64 is not defined, xdelta3 defaults
 # to 64 bit xoff_t.
 # using 32 bit xoff_t is necessary for compatibility
 # with old windows versions (Win9x, WinNT4)
 XDFLAGS+= -DXD3_USE_LARGEFILE64=0
+# make xdelta3 to use windows api for file i/o:
+XDFLAGS+= -DXD3_STDIO=0 -DXD3_POSIX=0 -DXD3_WIN32=1
 XDFLAGS+= -I$(XDELTA_DIR) -I$(LIBS_DIR)/common
 XDFLAGS+= $(CFLAGS)
 
